--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,7 @@ body {
 .responsive-image {
     max-width: 75%;
     height: auto;
+    align-items: center;
 }
 header {
     text-align: center;
