--- a/styles/main.css
+++ b/styles/main.css
@@ -11,9 +11,10 @@ body {
     padding: 20px;
 }
 .responsive-image {
-    max-width: 75%;
-    height: auto;
-    align-items: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%; /* Adjust the width as necessary */
 }
 header {
     text-align: center;
